<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.myapplication.Profile">


    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <!-- The main content view -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="100dp">

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male"
                    android:checked="false"
                    android:fontFamily="sans-serif-light"
                    android:onClick="onRadioButtonClicked"
                    android:buttonTint="@color/colorPrimary"
                    android:paddingRight="45dp"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/radio_female" />

            </RadioGroup>

            <EditText
                android:id="@+id/EditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="22dp"
                android:textColor="@color/Black"
                android:textCursorDrawable="@null"
                android:textAlignment="center"
                android:layout_marginTop="158dp"
                android:ems="10"
                style="@style/EditTextCustomHolo"
                android:inputType="text"
                android:layout_marginRight="100dp" />

            <TextView
                android:id="@+id/work"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/work_Text"
                android:textSize="30dp"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_marginTop="220dp"
                android:layout_marginLeft="35dp" />
            <Spinner
                android:id="@+id/work_spinner"
                android:layout_width="wrap_content"
                android:popupBackground="#d4cbbe"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="260dp"
                />

            <Button
                android:text="@string/cont_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/save_btn"
                android:padding="8dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="25dp"
                android:background="@color/colorPrimary"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="330dp"
                android:layout_marginLeft="50dp" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_Text"
                android:textColor="@color/Black"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="false"
                android:layout_marginLeft="50dp" />

            <TextView
                android:id="@+id/weight"
                android:textColor="@color/Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/weight_Text"
                android:textSize="30dp"
                android:imeOptions="actionDone"
                android:textStyle="bold"
                android:layout_marginTop="118dp"
                android:layout_marginLeft="50dp" />
        </FrameLayout>
        <!-- The navigation drawer -->
        <ListView android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="@color/colorPrimaryDark"
            android:alpha="255"
            />
    </android.support.v4.widget.DrawerLayout>




</RelativeLayout>
